--- a/PortfolioWebsite/HumidityApp.html
+++ b/PortfolioWebsite/HumidityApp.html
@@ -60,7 +60,7 @@
             <h2><a href="https://github.com/ecruzse/Humidity-Tracker">See the code here</a></h2>  
         </div>
         <div id="diagram-div">
-            <img src="/Media/HumidityAppDiagram.svg" alt="App Diagram" id="diagram-img">
+            <img src="Media/HumidityAppDiagram.svg" alt="App Diagram" id="diagram-img">
         </div>
 
         <!-- <div>
@@ -80,7 +80,7 @@
         </div> -->
 
         <div>
-            <a href="main.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
 
     </div>
