--- a/HumidityApp.html
+++ b/HumidityApp.html
@@ -21,13 +21,13 @@
               
                 <div>
                     <video id="app-video" controls>
-                        <source src="Media/EricCruz_APP.mp4" type="video/mp4">
+                        <source src="EricCruz_APP.mp4" type="video/mp4">
                     </video>
                 </div>
 
                 <div>
                     <!-- add more pics -->
-                        <img src="Media/project_devices.jpeg" alt="Project Devices" id="project-devices"> 
+                        <img src="project_devices.jpeg" alt="Project Devices" id="project-devices"> 
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
             <h2><a href="https://github.com/ecruzse/Humidity-Tracker">See the code here</a></h2>  
         </div>
         <div id="diagram-div">
-            <img src="Media/HumidityAppDiagram.svg" alt="App Diagram" id="diagram-img">
+            <img src="HumidityAppDiagram.svg" alt="App Diagram" id="diagram-img">
         </div>
 
         <!-- <div>
