changed file names

--- a/HumidityApp.html
+++ b/HumidityApp.html
@@ -27,7 +27,7 @@
 
                 <div>
                     <!-- add more pics -->
-                        <img src="project_devices.jpeg" alt="Project Devices" id="project-devices"> 
+                        <img src="project_devices.jpg" alt="Project Devices" id="project-devices"> 
                 </div>
             </div>
         </div>
