--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>About Me</h2>
 
             <span id="profile-pic-div">
-                <img src="37IQa.jpeg" alt="Personal Picture" id="profile-pic">
+                <img src="37IQa.jpg" alt="Personal Picture" id="profile-pic">
             </span>
             
             <!-- <p>Experimentation, imagination, and learning are only three of many things that I enjoy in life, and being able to utilize them with computers and software development is something I am ecstatic about. I specialize in Cloud Computing and Applications/Software Development. </p> -->
