added iframe for video

--- a/HumidityApp.html
+++ b/HumidityApp.html
@@ -18,12 +18,19 @@
             </h2>
 
             <div id="media-div">
+
+                <!-- for youtube -->
+                <div>    
+                    <iframe id="app-video" src="https://www.youtube.com/embed/MGHBUvjiDGE" title="Humidity App Demonstration"></iframe>
+
+                </div>
               
-                <div>
+                <!-- div for video stored locally -->
+                <!-- <div>
                     <video id="app-video" controls>
                         <source src="EricCruz_APP.mp4" type="video/mp4">
                     </video>
-                </div>
+                </div> -->
 
                 <div>
                     <!-- add more pics -->
