updated sentences and sizing

--- a/HumidityApp.html
+++ b/HumidityApp.html
@@ -13,14 +13,15 @@
         </div>
 
         <div>
-            <h2>
-                <p>Monitoring data such is especially important when it comes to taking care of living things. Taking care of plants I required monitoring of their ambient temperature and humidity to ensure proper growth and maintenance. The date is recorded as well to look at any possible trends that could hurt or help the plants' health.</p>
-            </h2>
+
+            <div id="aboutproject-div">
+                <h2>Monitoring data is essential for caring for living organisms. For plants, tracking environmental factors such as ambient temperature and humidity is essential to support optimal growth and health. Recording data over time enables the discovery of trends that can have an effect on plant well-being.</h2>
+            </div>
 
             <div id="media-div">
 
                 <!-- for youtube -->
-                <div>    
+                <div>       
                     <iframe id="app-video" src="https://www.youtube.com/embed/MGHBUvjiDGE" title="Humidity App Demonstration"></iframe>
 
                 </div>
@@ -44,10 +45,9 @@
                 <h2>Components</h2>
         
                 <ul>
-                    <li>
-                        RaspberryPi3
-                    </li>
-                    <li>Raspberry Pico?</li>
+                    <li>RaspberryPi3</li>
+                    <li>DHT11 Sensor</li>
+                    <li>Raspberry ZeroW</li>
                     <li>Breadboard</li>
                 </ul>
             </div>
