--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             
             <!-- <p>Experimentation, imagination, and learning are only three of many things that I enjoy in life, and being able to utilize them with computers and software development is something I am ecstatic about. I specialize in Cloud Computing and Applications/Software Development. </p> -->
 
-            <p>Experimentation, imagination, and continuous learning are at the core of my passion, and I am ecstatic to apply these principles to the world of computer science and software development. Specializing in Cloud Computing and Software/Application Development, I focus on building scalable, efficient systems and imagining solutions to reach our goals.</p>
+            <div id="aboutme-p">
+                <p>Experimentation, imagination, and continuous learning are at the core of my passion, and I am ecstatic to apply these principles to the field of computer science and software development. Specializing in Cloud Computing and Software/Application Development, I focus on building scalable, efficient systems and imagining solutions to reach our goals.</p>
+            </div>
         </div>
 
         <div>
