--- a/HumidityApp.html
+++ b/HumidityApp.html
@@ -47,7 +47,7 @@
                 <ul>
                     <li>RaspberryPi3</li>
                     <li>DHT11 Sensor</li>
-                    <li>Raspberry ZeroW</li>
+                    <li>RaspberryPi ZeroW</li>
                     <li>Breadboard</li>
                 </ul>
             </div>
